# voiceprint-filter

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  voiceprint-filter.spec
.github/workflows/: build.yml
.gstack/qa-reports/: baseline.json  qa-report-voiceprint-filter-2026-06-27.md
.history/: README_20260627163600.md
config/: default.yaml
docs/: UI_TODO.md
scripts/: download_models.py  measure_latency.py  verify_pipeline.py
src/voicefilter/: __init__.py  app.py  audio_router.py  config.py  enrollment.py  filter_pipeline.py  main_window.py  paths.py  speaker_engine.py  theme.py  tray_app.py  vad.py
src/voicefilter/utils/: power.py  ringbuffer.py
tests/: test_audio_router.py  test_config.py  test_enrollment_finish.py  test_enrollment_state.py  test_paths.py  test_pipeline.py  test_power.py  test_ringbuffer.py
