[project]
name = "voiceprint-filter"
version = "0.1.1"
description = "Local voiceprint filter — only your voice reaches virtual mic"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
